# rsmdf

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test.py
.github/workflows/: ci.yml  codeql-analysis.yml  dev.yml
example_files/: ASAP2_Demo_V171.mf4  ASAP2_Demo_V171_deflate.mf4  ASAP2_Demo_V171_transpose_deflate.mf4  Discrete_deflate.mf4
src/: ffi.rs  lib.rs  main.rs  mdf.rs  mdf3.rs  mdf4.rs  record.rs  signal.rs  tests.rs  utils.rs
src/MDF4/: AtBlock.rs  Block.rs  BlockHeader.rs  CaBlock.rs  CcBlock.rs  CgBlock.rs  CnBlock.rs  DgBlock.rs  DlBlock.rs  DzBlock.rs  EvBlock.rs  FhBlock.rs  HdBlock.rs  HlBlock.rs  IdBlock.rs  MdBlock.rs  SrBlock.rs  TxBlock.rs  at_block.rs  block.rs  block_header.rs  ca_block.rs  cc_block.rs  cg_block.rs  ch_block.rs  cn_block.rs  data_block.rs  dg_block.rs  dl_block.rs  dt_block.rs  dz_block.rs  ev_block.rs  fh_block.rs  hd_block.rs  hl_block.rs  id_block.rs  md_block.rs  mdf4.rs  mdf4_enums.rs  mod.rs  (+5 more)
src/mdf3/: cc_block.rs  cc_types.rs  cd_block.rs  ce_block.rs  cg_block.rs  channel_type.rs  cn_block.rs  conversion.rs  conversion_data.rs  date.rs  dg_block.rs  event.rs  hd_block.rs  id_block.rs  mdf3_block.rs  mdf3_file.rs  mod.rs  parameters.rs  pr_block.rs  signals.rs  sr_block.rs  time.rs  tr_block.rs  tx_block.rs
src/mdf4/: at_block.rs  block.rs  block_header.rs  ca_block.rs  cc_block.rs  cg_block.rs  ch_block.rs  cn_block.rs  data_block.rs  dg_block.rs  dl_block.rs  dt_block.rs  dz_block.rs  ev_block.rs  hd_block.rs  hl_block.rs  id_block.rs  md_block.rs  mdf4_enums.rs  mdf4_file.rs  mod.rs  sd_block.rs  utils.rs  (+3 more)
