[package]
name = "rsmdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
debug = 1

[dependencies]
xml-rs = "0"
itertools = "0.10"
rayon = "1.5"