[package]
name = "rsmdf"
version = "0.1.0"
edition = "2021"
license = "LICENSE"
keywords = ["ASAM", "MDF", "Reader"]
description = "ASAM MDF file reader and writer library, based on ASAMMDF for python"
readme = "README.md"
repository = "https://github.com/Liberty009/rsmdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
debug = 1

[dependencies]
xml-rs = "0.8.4"
itertools = "0.14.0"
chrono = "0.4.19"
flate2 = "1.0.24"
#rayon = "1.5.1"